# DocIQ

./: .gitignore  package-lock.json  package.json  pyproject.toml  readme.md
backend/: legal_docs.db  main.py  requirements.txt  rewrite_engine.py  summary_engine.py
frontend/: vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: FileUpload.tsx  Results.tsx  TextInput.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Analysis.tsx  AnalysisNew.tsx  Login.tsx  Signup.tsx
frontend/src/services/: api.ts
